--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <button id="next"><i class="fas fa-angle-right"></i></button>
   </div>
   <div id="control">
-    <button><i class="fas fa-redo-alt"></i></button>
-    <button><i class="fas fa-link"></i></button>
+    <button id="shuffle"><i class="fas fa-redo-alt"></i></button>
+    <button id="link"><i class="fas fa-link"></i></button>
   </div>
 </div>
 </div>
