Setup favicon and ogp

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head prefix="og: https://ogp.me/ns#">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta charset="UTF-8">
-  <title>カレンダー</title>
+  <title>イケダムカレンダー</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <meta property="og:title" content="イケダムカレンダー">
+  <meta property="og:site_name" content="イケダムカレンダー">
+  <meta property="og:description" content="イケダムカレンダーは指定月の印刷用のカレンダーを表示します。">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://calendar.ikedam.jp/">
+  <meta property="og:image" content="https://calendar.ikedam.jp/ogptop.png">
+  <meta name="twitter:card" content="summary">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
   <script src="./calendar.js"></script>
