--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="./calendar.js"></script>
 </head>
 <body>
+<section>
 <!--カレンダーの高さは 4 週～6 週で可変-->
 <div id="header">
   <div id="monthBlock">
@@ -80,5 +81,10 @@
     <div></div>
   </div>
 </div>
+</section>
+<footer>
+&copy; ikedam.jp
+<a href="https://github.com/ikedam/ikedam-calendar/blob/main/README.md" title="about ikedam-calendar">about ikedam-calendar</a>
+</footer>
 </body>
 </html>
